nesc-frontend/src/test/resources/integration/programs/bad/bad04/C.nc
/* Function returning a function. */

int f(long, long)(int);

configuration C
{
}
implementation
{
}
